# sample-8916

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build-native.sh  claude-best-practice.md  package-lock.json  package.json  pom.xml  run.sh
.github/workflows/: aws-eks-deploy.yml  deploy-ec2.yml  deploy.yaml
jni/: CMakeLists.txt
jni/src/: openredukti_jni.cpp
k8s/: deployment.yaml
src/main/java/com/example/demo/: CorsConfig.java  HelloController.java
src/main/java/com/example/demo/openredukti/: OpenReduktiController.java  OpenReduktiException.java  OpenReduktiNative.java  OpenReduktiService.java
src/main/java/com/example/demo/openredukti/dto/: BootstrapRequest.java  CurveInstrument.java  SwapValuationRequest.java  ZeroCurveInput.java
src/main/resources/static/: index.html
